unpackaged/main/default/objects/Pago_a_Cuenta__c/Pago_a_Cuenta__c.object-meta.xml
<CustomObject>
    <label>Pago a Cuenta</label>
    <nameField>
        <displayFormat>4-{0000000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pagos a Cuenta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>