unpackaged/main/default/objects/Pago_a_Cuenta__c/fields/Cancelacion__c.field-meta.xml
<CustomField>
    <fullName>Cancelacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancelación</label>
    <referenceTo>CPPT_Cancelacion__c</referenceTo>
    <relationshipLabel>Pagos a Cuenta</relationshipLabel>
    <relationshipName>Pagos_a_Cuenta</relationshipName>
    <type>Lookup</type>
</CustomField>