unpackaged/main/default/objects/Pago_a_Cuenta__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pagos a Cuenta</relationshipLabel>
    <relationshipName>Pagos_a_Cuenta</relationshipName>
    <type>Lookup</type>
</CustomField>