unpackaged/main/default/objects/Pago_a_Cuenta__c/fields/Corte_de_Caja__c.field-meta.xml
<CustomField>
    <fullName>Corte_de_Caja__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corte de Caja</label>
    <referenceTo>Corte_de_Caja__c</referenceTo>
    <relationshipLabel>Pagos a Cuenta</relationshipLabel>
    <relationshipName>Pagos_a_Cuenta</relationshipName>
    <type>Lookup</type>
</CustomField>