unpackaged/main/default/objects/Pago_a_Cuenta__c/fields/Desc_Tipo_Docto__c.field-meta.xml
<CustomField>
    <fullName>Desc_Tipo_Docto__c</fullName>
    <label>Desc Tipo Docto</label>
    <length>150</length>
    <type>Text</type>
</CustomField>