unpackaged/main/default/objects/Pago_a_Cuenta__c/fields/Estatus_del_Pago__c.field-meta.xml
<CustomField>
    <fullName>Estatus_del_Pago__c</fullName>
    <label>Estatus del Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abierto</fullName>
                <default>true</default>
                <label>Abierto</label>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Cerrado</fullName>
            </value>
            <value>
                <fullName>En Tránsito</fullName>
            </value>
            <value>
                <fullName>Fallo en AR</fullName>
            </value>
            <value>
                <fullName>Parcial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>