unpackaged/main/default/objects/Pago_a_Cuenta__c/fields/Folio_de_Cancelacion__c.field-meta.xml
<CustomField>
    <fullName>Folio_de_Cancelacion__c</fullName>
    <label>Folio de Cancelación</label>
    <length>100</length>
    <type>Text</type>
</CustomField>