unpackaged/main/default/objects/Pago_a_Cuenta__c/fields/Motivo_de_Cancelaci_n__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Cancelaci_n__c</fullName>
    <label>Motivo de Cancelación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Cancelación</fullName>
            </value>
            <value>
                <fullName>Transferencia de Saldo</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>