unpackaged/main/default/objects/Pago_a_Cuenta__c/fields/No_de_Tarjeta__c.field-meta.xml
<CustomField>
    <fullName>No_de_Tarjeta__c</fullName>
    <label>No. de Tarjeta</label>
    <length>20</length>
    <type>Text</type>
</CustomField>