unpackaged/main/default/objects/Pago_a_Cuenta__c/fields/Plan_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_Venta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan de Venta</label>
    <referenceTo>Plan_de_Venta__c</referenceTo>
    <relationshipLabel>Pagos a Cuenta</relationshipLabel>
    <relationshipName>Pagos_a_Cuenta</relationshipName>
    <type>Lookup</type>
</CustomField>