unpackaged/main/default/objects/Pago_a_Cuenta__c/fields/Proceso_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Proceso_de_Venta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proceso de Venta</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pagos a Cuenta</relationshipLabel>
    <relationshipName>Pagos_a_Cuenta</relationshipName>
    <type>Lookup</type>
</CustomField>