unpackaged/main/default/objects/Pago_a_Cuenta__c/fields/Referencia__c.field-meta.xml
<CustomField>
    <fullName>Referencia__c</fullName>
    <label>Referencia</label>
    <length>150</length>
    <type>Text</type>
</CustomField>