unpackaged/main/default/objects/Pago_a_Cuenta__c/fields/Titular_Tarjeta__c.field-meta.xml
<CustomField>
    <fullName>Titular_Tarjeta__c</fullName>
    <label>Titular Tarjeta</label>
    <length>100</length>
    <type>Text</type>
</CustomField>