unpackaged/main/default/objects/Pago_a_Cuenta__c/fields/Usuario_que_Cancela__c.field-meta.xml
<CustomField>
    <fullName>Usuario_que_Cancela__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario que Cancela</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pagos_a_Cuenta</relationshipName>
    <type>Lookup</type>
</CustomField>