unpackaged/main/default/objects/Pago_a_Cuenta__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cliente__c</columns>
    <columns>Fecha_de_Pago__c</columns>
    <columns>Estatus_del_Pago__c</columns>
    <columns>Importe__c</columns>
    <columns>Metodo_de_Pago__c</columns>
    <columns>Nombre_del_Pago__c</columns>
    <columns>Numero_de_Pago__c</columns>
    <columns>Proceso_de_Venta__c</columns>
    <columns>Tipo_de_Pago__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>